--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "MSToolTips"]
 	path = MSToolTips
 	url = https://github.com/ipodishima/MSToolTips.git
+[submodule "facebook"]
+	path = facebook
+	url = git://github.com/facebook/facebook-ios-sdk.git
